fix(technology-details): fixes overflow on mobile devices

--- a/src/ui/components/BottomSheet/styles.scss
+++ b/src/ui/components/BottomSheet/styles.scss
@@ -29,6 +29,7 @@ $c-bottom-sheet__base--max-width: 530px;
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 100%;
   max-height: 44vh;
   z-index: $g-zindex__bottom-sheet;
 
@@ -62,12 +63,6 @@ $c-bottom-sheet__base--max-width: 530px;
   margin: 0;
 
   background: $g-color__primary;
-  overflow: hidden;
-
-  overflow-x: visible;
-  overflow-y: auto;
-
-
   border: 0;
 
   pointer-events: none;
